# bevy_repl

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  book.toml  cliff.toml  index.html  print.html  searchindex.js  toc.html  toc.js
.github/workflows/: changelog.yml  mdbook.yml
bevy_repl_derive/: Cargo.toml  README.md
bevy_repl_derive/src/: lib.rs
book/: 404.html  architecture.html  builtins.html  changelog.html  command_parsing.html  configuration.html  examples.html  getting_started.html  getting_started_index.html  guides_index.html  intro.html  known_issues.html  license.html  logging.html  print.html  project_index.html  prompt_styling.html  reference_index.html  scheduling.html  searchindex.js  terminal_screens.html  toc.html  toc.js
book/src/: SUMMARY.md  architecture.md  builtins.md  changelog.md  command_parsing.md  examples.md  getting_started.md  intro.md  known_issues.md  license.md  logging.md  prompt_styling.md  scheduling.md  terminal_screens.md
commands/: builder_pattern.html  derive_pattern.html  index.html
config/: index.html  keybinds.html  prompt_styling.html
design/: command_parsing.html  index.html  logging.html  scheduling.html  terminal_screens.html
dev/: changelog.html  index.html  known_issues.html  license.html
doc/: 2025-08-02.md  DESIGN.md  demo.tape
doc/notes/: 2025-08-02.md  2025-08-03.md  2025-08-04.md  2025-08-05.md  2025-08-06.md  2025-08-07.md  2025-08-09-design-review.md  2025-08-09.md  2025-08-16-repl-logging-design.md  2025-08-16.md  2025-08-17-logging-strategies.md  2025-08-19-testing-strategy.md  2025-08-23-retro.md
doc/src/: SUMMARY.md  index.md
doc/src/commands/: builder_pattern.md  derive_pattern.md  index.md
doc/src/config/: index.md  keybinds.md  prompt_styling.md
doc/src/design/: command_parsing.md  index.md  logging.md  scheduling.md  terminal_screens.md
doc/src/dev/: aspirations.md  changelog.md  index.md  known_issues.md  license.md
doc/src/features/: default_commands.md  derive.md  index.md
examples/: aliases.rs  alt_screen.rs  builder.rs  builtins.rs  complete.rs  custom_log_layer.rs  custom_renderer.rs  default.rs  demo.rs  demo.tape  derive.rs  disabled.rs  fixed_update.rs  flag_args.rs  key_events.rs  key_events_forwarded.rs  key_events_suppressed.rs  keybinds.rs  log.rs  log_custom_layer.rs  log_inframe.rs  log_minimal.rs  log_pretty.rs  minimal.rs  minimal_derive.rs  minimal_no_ratatui.rs  optional_args.rs  pretty.rs  pretty_custom.rs  pretty_sandbox.rs  query.rs  show_prompt_actions.rs  simple.rs  simple_sandbox.rs  spawn.rs  spawn_entity.rs  stdout.rs  toggle.rs  update_resource.rs  window.rs
features/: default_commands.html  derive.html  index.html
src/: command.rs  commands.rs  config.rs  context.rs  error.rs  execution.rs  history.rs  input.rs  lib.rs  log_ecs.rs  macros.rs  output.rs  parse.rs  plugin.rs  print.rs  prompt.rs  registry.rs  repl.rs  stdout.rs  suggestions.rs  terminal.rs
src/built_ins/: clear.rs  close.rs  help.rs  mod.rs  quit.rs  sysinfo.rs  tree.rs
src/command/: mod.rs  parser.rs  register.rs
src/prompt/: config.rs  input.rs  key_events.rs  keymap.rs  mod.rs  pretty.rs  render.rs  scroll.rs
src/prompt/renderer/: alt_screen.rs  helpers.rs  minimal.rs  mod.rs  pretty.rs  scroll.rs  simple.rs  stdout.rs
src/test_support/: mod.rs
tests/: e2e_pretty_pty.rs  renderer_adapters.rs  tui_prompt_widget.rs
tests/snapshots/: tui_prompt_widget__pretty_prompt_snapshot.snap.new
