[workspace]
members = [".", "bevy_repl_derive"]

[package]
name = "bevy_repl"
version = "0.4.0"
edition = "2024"
description = "Add a REPL to headless Bevy applications"
license = "MIT"
repository = "https://github.com/philiplinden/bevy_repl"
keywords = ["bevy", "repl", "console", "debugging"]
categories = ["game-development", "development-tools"]

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = ["bevy_log", "trace"]}
bevy_ratatui = { version = "0.9.2", features = ["crossterm"] }
ratatui = "0.29.0"
clap = { version = "4.5.45" }
shell-words = "1.1"
bevy_repl_derive = { version = "0.1.0", path = "./bevy_repl_derive", optional = true }
ctrlc = "3"

# Error handling and logging
anyhow = "1.0.99"
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[features]
default = [
    "dev",
    "default_commands",
]
dev = ["bevy/dynamic_linking"]
derive = ["bevy_repl_derive", "clap/derive"]
stdout = []
default_commands = ["quit"]
quit = []
clear = []
help = []

[[example]]
name = "default"
path = "examples/default.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "stdout"
path = "examples/stdout.rs"
required-features = ["stdout"]

[[example]]
name = "fixed_update"
path = "examples/fixed_update.rs"

[[example]]
name = "update_resource"
path = "examples/update_resource.rs"

[[example]]
name = "derive"
path = "examples/derive.rs"
required-features = ["derive"]

[[example]]
name = "builder"
path = "examples/builder.rs"

[[example]]
name = "window"
path = "examples/window.rs"
required-features = ["bevy/bevy_window"]

[[example]]
name = "builtins"
path = "examples/builtins.rs"

[[example]]
name = "aliases"
path = "examples/aliases.rs"

[[example]]
name = "log_minimal"
path = "examples/log_minimal.rs"

[[example]]
name = "key_events_suppressed"
path = "examples/key_events_suppressed.rs"

[[example]]
name = "spawn_entity"
path = "examples/spawn_entity.rs"

[[example]]
name = "query"
path = "examples/query.rs"

[[example]]
name = "custom_renderer"
path = "examples/custom_renderer.rs"

[[example]]
name = "disabled"
path = "examples/disabled.rs"

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
