[package]
name = "bevy_repl_derive"
version = "0.1.0"
edition = "2024"
description = "Derive macros for bevy_repl"
license = "MIT"
repository = "https://github.com/philiplinden/bevy_repl"
keywords = ["bevy", "repl", "derive", "macro"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] } 
